# BreakIt

./: .gitignore  CMakeLists.txt  README.md  skeleton.cpp
.github/workflows/: coverity_scan.yml  scan_build.yml
app/: main.cpp
include/: FileOps.h  SecurityOps.h  Shell.h  UserOps.h
src/: FileOps.cpp  SecurityOps.cpp  Shell.cpp  UserOps.cpp
